--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: python
 python:
   - "3.6"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+# install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 main.py
+  - python3 test1.py
+  - if [ $? == 1 ];then
+      python3 test2.py
+    else
+      python3 test1.py
+    fi;
