--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: python
 python:
   - "3.6"
 # command to install dependencies
-# install: "pip install -r requirements.txt"
+install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py
-  - if [ $? == 1 ];then
-      python3 test2.py;
+  - python3 main.py
+  - if [ $? == 0 ];then
+      exit;
     else
-      python3 test1.py;
+      python3 main.py;
     fi;
