--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: "pip install -r requirements.txt"
 script:
   - python3 main.py
   - if [ $? == 0 ];then
-      exit;
+      echo "Build Success. ";
     else
       python3 main.py;
     fi;
