--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: "pip install -r requirements.txt"
 script:
   - python3 test1.py
   - if [ $? == 1 ];then
+      echo "$?";
       python3 test2.py;
     else
       python3 test1.py;
