--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py
+  - python3 main.py
   - if [ $? == 1 ];then
-      echo "$?";
-      python3 test2.py;
-    else
-      python3 test1.py;
+      python3 main.py;
+     else 
+      echo "OK"
     fi;
