--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 main.py
-  - if [ $? == 1 ];then
-      python3 main.py;
+  - python3 test1.py
+  - if [ $? == "1" ];then
+      echo 'No ok';
      else 
       echo "OK";
     fi;
