--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: "pip install -r requirements.txt"
 script:
   - python3 test1.py
   - result=$?
-  - if [ result == 1 ];then
+  - if [ result == "1" ];then
       echo 'No ok';
      else 
       echo "OK";
