--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py
-  - result=$?
-  - echo result
+  - python3 test1.py;result=$?
+  - echo "result"
   - if [ result == "1" ];then
       echo 'No ok';
      else 
