--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py;result=$?
+  - python3 test1.py;export result=$?
   - if [ result == 1 ];then
       echo 'No ok';
      else 
