--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 # command to run tests
 script:
   - python3 test1.py
-  - export result=$?
-  - if [ ${result} == 1 ];then
+  - export result=$?;echo result=${result}
+  - if [ result == 1 ];then
       echo 'No ok';
      else 
       echo "OK";
