--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,5 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py
-  - export result=$?;echo result=${result}
-  - if [ result == 1 ];then
-      echo 'No ok';
-     else 
-      echo "OK";
-    fi
+  - python3 test1.py || python3 test2.py
+  - python3 test1.py && python3 test2.py
