--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 test1.py || python3 test2.py
-  - python3 test1.py && python3 test2.py
+  - python3 mian.py || python3 main.py
