--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script:
-  - python3 mian.py || python3 main.py
+  - python3 main.py || python3 main.py
