--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ python:
 # command to install dependencies
 # install: "pip install -r requirements.txt"
 # command to run tests
+before_install:
+    - export TZ='Asia/Shanghai'
+install:
+    - "pip install -r requirements.txt"
 script:
   - python3 main.py || python3 main.py
