--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
 install:
     - "pip install -r requirements.txt"
 script:
-  - python3 main.py || python3 main.py
+  - python3 main.py
